--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -77,6 +77,15 @@
                 Happy Buttons System Dashboard
             </a>
             <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="/agents">
+                    <i class="fas fa-robot me-1"></i>Agents
+                </a>
+                <a class="nav-link" href="/external">
+                    <i class="fas fa-handshake me-1"></i>Externe Partner
+                </a>
+                <a class="nav-link" href="/config">
+                    <i class="fas fa-cog me-1"></i>Config
+                </a>
                 <span class="navbar-text">
                     <i class="fas fa-clock me-1"></i>
                     <span id="current-time"></span>
