--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -72,16 +72,22 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="#">
+            <a class="navbar-brand fw-bold" href="/">
                 <i class="fas fa-crown me-2"></i>
-                Happy Buttons System Dashboard
+                Happy Buttons GmbH
             </a>
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/agents">
-                    <i class="fas fa-robot me-1"></i>Agents
+                <a class="nav-link" href="/">
+                    <i class="fas fa-home me-1"></i>Home
                 </a>
-                <a class="nav-link" href="/external">
-                    <i class="fas fa-handshake me-1"></i>Externe Partner
+                <a class="nav-link active" href="/dashboard">
+                    <i class="fas fa-tachometer-alt me-1"></i>Dashboard
+                </a>
+                <a class="nav-link" href="/shop">
+                    <i class="fas fa-shopping-bag me-1"></i>Shop
+                </a>
+                <a class="nav-link" href="/agents">
+                    <i class="fas fa-users me-1"></i>Teams
                 </a>
                 <a class="nav-link" href="/config">
                     <i class="fas fa-cog me-1"></i>Config
